ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: your-domain.com
    http:
      paths:
      - path: /flask_app
        pathType: Prefix
        backend:
          service:
            name: flask-app-service
            port:
              number: 5000
      - path: /another_service
        pathType: Prefix
        backend:
          service:
            name: another-service
            port:
              number: 5000
